--- a/mobile/src/main/res/layout/fragment_moviedetail.xml
+++ b/mobile/src/main/res/layout/fragment_moviedetail.xml
@@ -28,9 +28,7 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <include
-            android:id="@+id/about_fragment"
-            layout="@layout/fragment_detail_about" />
+        <include layout="@layout/fragment_detail_about" />
 
         <View
             android:layout_width="match_parent"
